Documentation of functions + README

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,9 @@ export(fGet2DRoundedBoundaryAroundPath)
 export(fGet3DTrajectoryBetweenTwoPoints)
 export(fGetInterpolatedPointsAtDivisionPlane)
 export(fGetPlaneAt)
+export(fGetProjectionsOnPlane)
 export(fGetTransformedCoordinates)
-export(fGetTransformedCoordinates2)
+export(fGetTransformedCoordinatesDiscard)
 export(fGetTriangleAlongLineSegment)
 export(fRemovePointsBehindDividingPlane)
 import(zoo)
