--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,7 @@ export(fGetProjectionsOnPlane)
 export(fGetTransformedCoordinates)
 export(fGetTransformedCoordinatesDiscard)
 export(fGetTriangleAlongLineSegment)
+export(fModelBounce)
 export(fRemovePointsBehindDividingPlane)
+import(data.table)
 import(zoo)
