--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,3 +17,4 @@ export(fPointLineSegmentProjection)
 export(fRelativeXYPositionOnPlane)
 export(fRemovePointsBehindDividingPlane)
 import(data.table)
+import(zoo)
