Start 3d font function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(fGetInterpolatedPointsAtDivisionPlane)
 export(fGetNormalVector)
 export(fGetPlaneAt)
 export(fGetProjectionsOnPlane)
+export(fGetTextCoordinates)
 export(fGetTransformedCoordinates)
 export(fGetTriangleAlongLineSegment)
 export(fModelBounce)
@@ -17,4 +18,6 @@ export(fPointLineSegmentProjection)
 export(fRelativeXYPositionOnPlane)
 export(fRemovePointsBehindDividingPlane)
 import(data.table)
+import(ggplot2)
+import(png)
 import(zoo)
