Spherical projection and line segment shifting functionality

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,11 @@ export(fCrossProduct)
 export(fDistance)
 export(fDotProduct)
 export(fGet2DRoundedBoundaryAroundPath)
+export(fGet3DFromMultiple2D)
 export(fGet3DTrajectoryBetweenTwoPoints)
 export(fGetInterpolatedPointsAtDivisionPlane)
 export(fGetNormalVector)
+export(fGetOrthogonalAxes)
 export(fGetPlaneAt)
 export(fGetProjectionsOnPlane)
 export(fGetTextCoordinates)
