Overdue commit. Hope everything else still works

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,10 @@ export(fDotProduct)
 export(fGet2DRoundedBoundaryAroundPath)
 export(fGet3DFromMultiple2D)
 export(fGet3DTrajectoryBetweenTwoPoints)
+export(fGetBlocksThroughWhichPassesWent)
+export(fGetDisplacedLineSegment)
 export(fGetInterpolatedPointsAtDivisionPlane)
+export(fGetMovedLineSegments)
 export(fGetNormalVector)
 export(fGetOrthogonalAxes)
 export(fGetPlaneAt)
@@ -14,6 +17,7 @@ export(fGetProjectionsOnPlane)
 export(fGetTextCoordinates)
 export(fGetTransformedCoordinates)
 export(fGetTriangleAlongLineSegment)
+export(fGetXYZFromLatLng)
 export(fModelBounce)
 export(fPointLineSegmentDistanceVectorised)
 export(fPointLineSegmentProjection)
