Some more functions to time with humanoid

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,11 @@ export(fGetInterpolatedPointsAtDivisionPlane)
 export(fGetMovedLineSegments)
 export(fGetNormalVector)
 export(fGetOrthogonalAxes)
+export(fGetPanelPointsFromRightAngledPolygon)
+export(fGetPanelsFromPanelPoints)
 export(fGetPlaneAt)
 export(fGetProjectionsOnPlane)
+export(fGetReorientedCoordinates)
 export(fGetTextCoordinates)
 export(fGetTransformedCoordinates)
 export(fGetTriangleAlongLineSegment)
@@ -23,6 +26,7 @@ export(fPointLineSegmentDistanceVectorised)
 export(fPointLineSegmentProjection)
 export(fRelativeXYPositionOnPlane)
 export(fRemovePointsBehindDividingPlane)
+export(mark_jersey_no)
 import(data.table)
 import(ggplot2)
 import(png)
